<resources>
    <string name="app_name">PocketNews</string>

    <!-- Activity main-->
    <string name="textview_regions">Regiones</string>
    <string name="textview_recent">Las noticias más relevantes</string>
    <string name="search_textview_hint">Ingresa el nombre del pokémon</string>
    <string name="textview_news">Noticias</string>
    <string name="textview_contact_us">Contacta con nosotros</string>
    <string name="textview_contact_name">Emmanuel Pacheco</string>
    <string name="textview_contact_email">eeph31@gmail.com</string>
    <string name="textview_contact_phone">(+52) 5548562659</string>
    <string name="textview_contact_policy">Política de privacidad</string>
    <string name="textview_contact_source">Visita nuestra fuente de información</string>
    <string name="textview_contact_source_url">https://pokemongolive.com/es_mx/news/?hl=en</string>
    <string name="textview_policy_source_url">https://www.freeprivacypolicy.com/live/dc4d45fb-f8ea-40eb-a67a-a819244214a2</string>
    <!-- Fragment regiones-->
    <string name="textview_subtitle_region">Busca en cualquier región</string>
    <string name="textview_subtitle_region_pokemon"><b>%1$s</b> Pokémon encontrados \nen esta región</string>

    <!-- Fragment detail pokemon-->
    <string name="textview_subtitle_detail_pokemon">%1$s es considerado \nel Pokémon %2$s</string>
    <string name="textview_subtitle_detail_pokedex">¿Qué dice la pokedex sobre\n%1$s?</string>
    <string name="pokemon_title_height">Altura</string>
    <string name="pokemon_title_weight">Peso</string>
    <string name="pokemon_title_category">Categoría</string>
    <string name="pokemon_title_ability">Habilidad</string>
    <string name="pokemon_subtitle_stats">Estadísticas</string>
    <string name="pokemon_title_stats_hp">Salud</string>
    <string name="pokemon_title_stats_attack">Ataque</string>
    <string name="pokemon_title_stats_defence">Defensa</string>
    <string name="pokemon_title_special_attack">At. Especial</string>
    <string name="pokemon_title_special_defence">Def. Especial</string>
    <string name="pokemon_title_speed">Velocidad</string>
    <string name="pokemon_title_total">Total</string>
    <string name="pokemon_subtitle_evolution">Linea evolutiva</string>
    <string name="pokemon_subtitle_interesting_data">Datos interesantes</string>
    <string name="textview_custom_param">%1$s</string>
    <string name="msg_pokemon_empty">No se encontro información</string>


    <!-- Fragment tabla de tipos-->
    <string name="table_type_title">Tabla de tipos</string>
    <string name="table_type_subtitle">Selecciona un tipo para ver el detalle</string>


    <!-- Fragment detalle de tipos-->
    <string name="type_detail_title">Fortalezas y Debilidades</string>
    <string name="type_detail_none">Ninguno</string>
    <string name="type_detail_effective">¡Super eficaz!</string>
    <string name="type_detail_weak">Poco eficaz</string>
    <string name="type_detail_resist">Inmune</string>
    <string name="type_detail_vulnerability">Vulnerable</string>

    <!--Menu home-->
    <string name="menu_news">Noticias</string>
    <string name="menu_pokemon">Monsters</string>
    <string name="menu_table_type">Tabla de tipos</string>

    <!--Msg General-->
    <string name="general_error">Ha ocurrido un error, por favor inténtelo de nuevo más tarde</string>
    <string name="internet_conextion">Error de conexión intenta más tarde</string>
    <string name="msg_section_maintenance">Sección en mantenimiento</string>
    <string name="msg_load_section">Cargando información</string>

    <!--Msg services-->
    <string name="error_download_config">Ha ocurrido un error al recuperar la configuración general</string>
    <string name="error_download_news">Ha ocurrido un error al recuperar las noticias</string>
    <string name="error_download_pokemon_region">Ha ocurrido un error al recuperar los pokémon por región</string>
    <string name="error_download_pokemon_detail">Ha ocurrido un error al recuperar la información de este pokémon</string>

    <!--Types-->
    <string name="type_normal">NORMAL</string>
    <string name="type_fighting">LUCHA</string>
    <string name="type_flying">VOLADOR</string>
    <string name="type_poison">VENENO</string>
    <string name="type_ground">TIERRA</string>
    <string name="type_rock">ROCA</string>
    <string name="type_bug">BICHO</string>
    <string name="type_ghost">FANTASMA</string>
    <string name="type_steel">ACERO</string>
    <string name="type_fire">FUEGO</string>
    <string name="type_water">AGUA</string>
    <string name="type_grass">HIERBA</string>
    <string name="type_electric">ELÉCTRICO</string>
    <string name="type_psychic">PSÍQUICO</string>
    <string name="type_ice">HIELO</string>
    <string name="type_dragon">DRAGÓN</string>
    <string name="type_fairy">HADA</string>
    <string name="type_dark">SINIESTRO</string>

    <!--Regions-->
    <!--Region Kanto-->
    <string name="kanto_id">1</string>
    <string name="kanto_name">Kanto</string>
    <string name="kanto_total_pokemon">151</string>
    <string name="kanto_first_medal">Roca</string>
    <string name="kanto_second_medal">Cascada</string>
    <string name="kanto_third_medal">Trueno</string>
    <string name="kanto_forth_medal">Arcoiris</string>
    <string name="kanto_fifth_medal">Alma</string>
    <string name="kanto_sixth_medal">Pantano</string>
    <string name="kanto_seventh_medal">Volcán</string>
    <string name="kanto_eigth_medal">Tierra</string>

    <!--Region Jhoto-->
    <string name="jhoto_id">2</string>
    <string name="jhoto_name">Jhoto</string>
    <string name="jhoto_total_pokemon">100</string>
    <string name="jhoto_first_medal">Zafiro</string>
    <string name="jhoto_second_medal">Colmena</string>
    <string name="jhoto_third_medal">Planicie</string>
    <string name="jhoto_forth_medal">Niebla</string>
    <string name="jhoto_fifth_medal">Tormenta</string>
    <string name="jhoto_sixth_medal">Mineral</string>
    <string name="jhoto_seventh_medal">Glaciar</string>
    <string name="jhoto_eigth_medal">Dragón</string>
    <string name="coming_soon">Próximamente</string>
</resources>