<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.dalvik.pokemonsters.ui.news.NewsViewModel" />

        <import type="android.view.View" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/purple_700"
        tools:context=".ui.main.MainActivity">


        <TextView
            android:id="@+id/textPokemonName"
            style="@style/TextViewTitleBold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <View
            android:id="@+id/view"
            android:layout_width="0dp"
            android:layout_height="@dimen/_2sdp"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:background="@color/primary_gray"
            app:layout_constraintBottom_toBottomOf="@+id/textSubtitleCategory"
            app:layout_constraintEnd_toStartOf="@+id/textSubtitleCategory"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textPokemonName" />

        <TextView
            android:id="@+id/textSubtitleCategory"
            style="@style/TextViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/_14sdp"
            android:text="@string/textview_contact_us"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textPokemonName" />


        <View
            android:layout_width="0dp"
            android:layout_height="@dimen/_2sdp"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:background="@color/primary_gray"
            app:layout_constraintBottom_toBottomOf="@+id/textSubtitleCategory"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textSubtitleCategory"
            app:layout_constraintTop_toBottomOf="@+id/textPokemonName" />


        <ImageView
            android:id="@+id/imgContactLogo"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_100sdp"
            android:layout_marginTop="@dimen/_24sdp"
            android:src="@mipmap/ic_launcher"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textSubtitleCategory" />

        <TextView
            android:id="@+id/textContactName"
            style="@style/TextViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_source"
            android:drawablePadding="@dimen/_16sdp"
            android:drawableTint="@color/primary_gray"
            android:gravity="center"
            android:padding="@dimen/_14sdp"
            android:text="@string/textview_contact_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgContactLogo" />

        <TextView
            android:id="@+id/textContactEmail"
            style="@style/TextViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="@dimen/_16sdp"
            android:drawableTint="@color/primary_gray"
            android:gravity="center"
            android:padding="@dimen/_14sdp"
            android:text="@string/textview_contact_email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textContactName" />

        <TextView
            android:id="@+id/textContactPhone"
            style="@style/TextViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_phone"
            android:drawablePadding="@dimen/_16sdp"
            android:drawableTint="@color/primary_gray"
            android:gravity="center"
            android:padding="@dimen/_14sdp"
            android:text="@string/textview_contact_phone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textContactEmail" />

        <TextView
            android:id="@+id/textContactSource"
            style="@style/TextViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="@dimen/_16sdp"
            android:drawableTint="@color/primary_gray"
            android:gravity="center"
            android:padding="@dimen/_14sdp"
            android:text="@string/textview_contact_source"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textContactPhone"
            app:layout_constraintVertical_bias="1" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>