<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.dalvik.pokemonsters.ui.regions.RegionsViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/purple_700"
        android:animateLayoutChanges="true"
        tools:context=".PokemonFragment">

        <TextView
            android:id="@+id/textPokemonName"
            style="@style/TextViewTitleBold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/textview_regions"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view"
            android:layout_width="0dp"
            android:layout_height="@dimen/_2sdp"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:background="@color/primary_gray"
            app:layout_constraintBottom_toBottomOf="@+id/textSubtitleCategory"
            app:layout_constraintEnd_toStartOf="@+id/textSubtitleCategory"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textPokemonName" />

        <TextView
            android:id="@+id/textSubtitleCategory"
            style="@style/TextViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:imeOptions="actionDone"
            android:padding="@dimen/_14sdp"
            android:text="@string/textview_subtitle_region"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textPokemonName"
            tools:text="@string/textview_subtitle_region" />


        <View
            android:layout_width="0dp"
            android:layout_height="@dimen/_2sdp"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_5sdp"
            android:background="@color/primary_gray"
            app:layout_constraintBottom_toBottomOf="@+id/textSubtitleCategory"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textSubtitleCategory"
            app:layout_constraintTop_toBottomOf="@+id/textPokemonName" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_14sdp"
            android:layout_marginEnd="@dimen/_14sdp"
            android:gravity="center"
            app:boxBackgroundColor="@android:color/transparent"
            app:boxCornerRadiusBottomEnd="@dimen/_8sdp"
            app:boxCornerRadiusBottomStart="@dimen/_8sdp"
            app:boxCornerRadiusTopEnd="@dimen/_8sdp"
            app:boxCornerRadiusTopStart="@dimen/_8sdp"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:endIconMode="clear_text"
            app:hintEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textSubtitleCategory"
            app:startIconDrawable="@drawable/ic_search">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etSearch"
                style="@style/SearchEdittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:hint="@string/search_textview_hint"
                android:inputType="textPersonName|textCapWords"
                android:textColorHint="@color/secondary_purple_700" />

        </com.google.android.material.textfield.TextInputLayout>

        <ListView
            android:id="@+id/listResults"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_14sdp"
            android:background="@drawable/background_rounded_white"
            android:choiceMode="singleChoice"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/regionResults"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
            app:listRegions="@{viewModel.itemList}"
            tools:listitem="@layout/item_list_regions" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>